<resources>
    <string name="app_name">Market Online</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_start_screen">StartScreen</string>
    <string name="et_username">Tên đăng nhập</string>
    <string name="et_password">Mật khẩu</string>
    <string name="btn_register">Tạo tài khoản mới</string>
    <string name="btn_login">Đăng nhập</string>
    <string name="btn_skip_login">Bỏ qua</string>
    <string name="title_activity_login_screen">LoginScreen</string>
    <string name="btn_back">Quay lại</string>
    <string name="title_activity_main_screen">Chợ đồ cũ trực tuyến</string>
    <string name="et_re_password">Nhập lại mật khẩu</string>
    <string name="title_activity_register_screen">RegisterScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_profile">Trang cá nhân</string>
    <string name="menu_search">Tìm kiếm</string>
    <string name="menu_notification">Thông báo</string>
    <string name="menu_logout">Đăng xuất</string>
    <string name="tab_market_products">Chợ</string>
    <string name="tab_your_products">Của bạn</string>
    <string name="title_activity_add_product_screen">Đăng bán sản phẩm</string>
    <string name="nav_add_product">Đăng bán sản phẩm</string>
    <string name="title_activity_profile_screen">Thông tin cá nhân</string>
    <string name="title_activity_add_image_screen">Thêm ảnh</string>
    <string name="content_non_has_user">Chưa có tài khoản?</string>
    <string name="content_has_user">Đã có tài khoản?</string>
    <string name="content_or">hoặc</string>
    <string name="title_activity_search_product">Tìm kiếm</string>
    <string name="btn_cancel">Hủy</string>
    <string name="required_text">* yêu cầu không để trống</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
