<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile2"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_add_product"
            android:icon="@drawable/ic_add"
            android:title="@string/nav_add_product" />
<!--        <item-->
<!--            android:id="@+id/nav_notification"-->
<!--            android:icon="@drawable/ic_notifications"-->
<!--            android:title="@string/menu_notification" />-->
        <item
            android:enabled="false"
            android:title="" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>